core/css/yui.css
/* ... */
/*** T5 - 240px right outer layout with 200px inner sidebar ***/
/* 974px layout with 240px outer & 200px inner*/
/* inner sidebar on right */
.doc4.yui-t5 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc4.yui-t5 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:71.35%;}
/* 950px layout with 240px outer & 200px inner */
/* inner sidebar on right */
.doc2.yui-t5 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc2.yui-t5 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:70.3%;}
/*** T8 - 200px left outer layout with 200px inner sidebar ***/
/* 974px layout with 200px outer & 200px inner*/
/* inner sidebar on right */
.doc4.yui-t8 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc4.yui-t8 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:72.3%;}
/* 950px layout with 200px outer & 200px inner */
/* inner sidebar on right */
.doc2.yui-t8 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc2.yui-t8 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:71.3%;}
/*** T9 - 200px right outer layout with 200px inner sidebar ***/
/* 974px layout with 200px outer & 200px inner*/
/* inner sidebar on right */
.doc4.yui-t9 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc4.yui-t9 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:72.3%;}
/* 950px layout with 200px outer & 200px inner */
/* inner sidebar on right */
.doc2.yui-t9 #yui-main .yui-b .yui-gh #primary-content.yui-u.first,
/* inner sidebar on left */
.doc2.yui-t9 #yui-main .yui-b .yui-gi #primary-content.yui-u.first{width:71.3%;}

#inner-wrap.yui-gc #tertiary-content{width: 31%;}
/* set modules in sidebars to use all available space */
#inner-wrap.yui-gc #tertiary-content .mod-basic {width: 100%;}

/* @end */

/* @group block & module grid adjustment styles to get precision layout */

	/* @group First we need resets, clears, margin for all blocks blocks */

#masthead{clear:both;position:relative;}

#skipto{position:absolute;left:-9999px;}

#branding{height:100%;float:left;width:auto;}

#branding a:hover{text-decoration:none;}

#bottomshelf{overflow: hidden; }

#top{float:right;}

.slider-toolbar{width:100%;}
#toolbar-wrap .slider-toolbar a {display:block;position:absolute;right:0;z-index:999;cursor: pointer; }
#toolbar-wrap .slider-toolbar a:focus{outline:none;}
	
#user1{overflow:hidden;float:none;width:100%;clear:both;}
#user2{clear:both;}
#user1 .mod{overflow: hidden;margin-top:.987em;}
#user1 .first{margin-left:0;}
#inset1,#inset2,#inset3,#inset4{/*margin-bottom:1em;*/overflow: hidden;}
#inset1 .mod-basic,
#inset2 .mod-basic,
#inset3 .mod-basic,
#inset4 .mod-basic{width:auto;float:none;}
#inset4{clear:both;}

/* add margin to last module in sidebar */
.sidebar .lastmodule {margin-bottom:1em;}


		
	/* @end */
	
	/* @group generic styles for all pos */

/* adjustment for when 2 mods published with 33/66*/
.modcount2.yui-gd .yui-u {margin-left: 1.35%;}
.modcount2.yui-gd .yui-u.first {margin-left: 0;}
/* adjustment for when 2 mods published with 66/33*/
.modcount2.yui-gc .yui-u.first,
.modcount2.yui-gc .yui-u.first {width: 66.2%;}

	/* @end */

/* styling for grids in the sidebars */
.sidebar .grid .mod-grid.yui-u{width:48.0%;margin-left:4%;}

/* user1 & 2 */
#user1.grid.modcount3 .mod-grid.yui-u,
#user2.grid.modcount3 .mod-grid.yui-u {width:32.44%;margin-left: 1.33%; }
#user1.grid.modcount4 .mod-grid.yui-u,
#user2.grid.modcount4 .mod-grid.yui-u {width:24%;margin-left:1.33%}
#user1.grid.modcount5 .mod-grid.yui-u,
#user2.grid.modcount5 .mod-grid.yui-u {width:18.88%;margin-left:1.4%}

	/* @group inset position contol styles */

/* inset 1 & 4 	*/
#inset1.grid.modcount5 .yui-u{width:18.4%;margin-left:2%}
#inset1.grid.modcount4 .yui-u{width:23.55%;margin-left:1.9%}

/* make grids with 4 and 5 mods nested in content float correctly */
#inset2.grid.modcount4 .yui-u,
#inset2.grid.modcount5 .yui-u,
#inset3.grid.modcount4 .yui-u,
#inset3.grid.modcount5 .yui-u  {float: left;}

/* fix for inset 2 & 3 in primary content - needs specificity to not float due to nesting */
.yui-g #primary-content #inset2.no-grid .yui-u,
.yui-gc #primary-content #inset2.no-grid .yui-u,
.yui-gd #primary-content #inset2.no-grid .yui-u,
.yui-ge #primary-content #inset2.no-grid .yui-u,
.yui-gf #primary-content #inset2.no-grid .yui-u,
.yui-g #primary-content #inset3.no-grid .yui-u,
.yui-gc #primary-content #inset3.no-grid .yui-u,
.yui-gd #primary-content #inset3.no-grid .yui-u,
.yui-ge #primary-content #inset3.no-grid .yui-u,
.yui-gf #primary-content #inset3.no-grid .yui-u {float: none;width: 100%;}
/*.yui-g #primary-content #inset2 .yui-u,
.yui-g #primary-content #inset3 .yui-u {width: 100%;}*/

.yui-gc #inset2.no-grid div.first,
.yui-gc #inset3.no-grid div.first {
	width: 100%;
}
/* nested inset grids specificity fix */
.yui-gc #inset2.yui-g,
.yui-gd #inset2.yui-g,
.yui-ge #inset2.yui-g,
.yui-gf #inset2.yui-g,
.yui-gc #inset3.yui-g,
.yui-gd #inset3.yui-g,
.yui-ge #inset3.yui-g,
.yui-gf #inset3.yui-g {
	width: 100%;
	margin-left: 0;
}

/* inset 2 & 3 when using inner layouts and nested insets */
.yui-gc #inset2.yui-gb.modcount3 .yui-u,
.yui-gc #inset3.yui-gb.modcount3 .yui-u,
.yui-gd #inset2.yui-gb.modcount3 .yui-u,
.yui-gd #inset3.yui-gb.modcount3 .yui-u,
.yui-ge #inset2.yui-gb.modcount3 .yui-u,
.yui-ge #inset3.yui-gb.modcount3 .yui-u,
.yui-gf #inset2.yui-gb.modcount3 .yui-u,
.yui-gf #inset3.yui-gb.modcount3 .yui-u {
	width: 32.3%;
	float: left;
} 

/* inset2 adjustment for when 2 mods published with wide sidebars */
#inset2.yui-gc.modcount2 .yui-u.first {width: 65.5%;}
#inset2.yui-gc.modcount2 .yui-u {width: 31.5%;margin-left: 3%;}
#inset2.yui-gd.modcount2 .yui-u.first {width: 32%;}
#inset2.yui-gd.modcount2 .yui-u {width: 66%;margin-left: 2%;}
#inset2.yui-ge.modcount2 .yui-u.first {width: 73.5%;}
/* ... */

